<resources>
    <string name="app_name">Calculator</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="result">=</string>
    <string name="clear">C</string>
    <string name="delete">X</string>
    <string name="decimal">.</string>
    <string name="surplus">%</string>
    <string name="leftParenthese">(</string>
    <string name="rightParenthese">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="x2">x²</string>
    <string name="x3">x³</string>
    <string name="sqrt">√</string>
    <string name="e">e</string>
    <string name="log">Log</string>
    <string name="ln">ln</string>
    <string name="xy">x^y</string>
    <string name="x1">1/x</string>
    <string name="pai">π</string>
    <string name="factorial">x!</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="help">这是帮助。</string>
</resources>