<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Conversion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="进制转换"
        android:textSize="20sp"/>

    <GridLayout
        android:id="@+id/gridLayout_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:rowCount="10"
        android:columnCount="4">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:id="@+id/spinner_base1"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/txt"
            android:layout_columnSpan="4"
            android:layout_gravity = "fill"
            android:textSize="40sp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:id="@+id/spinner_base2"
            android:layout_alignParentStart="true"/>
        <EditText
            android:id="@+id/result"
            android:layout_columnSpan="4"
            android:layout_gravity = "fill"
            android:textSize="40sp"/>
        <Button
            android:text="@string/number7"/>
        <Button
            android:text="@string/number8" />
        <Button
            android:text="@string/number9" />
        <Button
            android:layout_rowSpan="2"
            android:layout_gravity="fill"
            android:text="@string/delete" />
        <Button
            android:text="@string/number4" />
        <Button
            android:text="@string/number5" />
        <Button
            android:text="@string/number6" />
        <Button
            android:text="@string/number1" />
        <Button
            android:text="@string/number2" />
        <Button
            android:text="@string/number3" />
        <Button
            android:layout_rowSpan="2"
            android:layout_gravity="fill"
            android:text="@string/clear" />
        <Button
            android:text="@string/number0" />
        <Button
            android:text="@string/A" />
        <Button
            android:text="@string/B" />
        <Button
            android:text="@string/C" />
        <Button
            android:text="@string/D" />
        <Button
            android:text="@string/E" />
        <Button
            android:text="@string/F" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>